Little code changes for Java 11 support